[UPDATE] responsive design

--- a/assets/css/pessoa/pessoa-imagem.css
+++ b/assets/css/pessoa/pessoa-imagem.css
@@ -18,3 +18,9 @@
 .pessoa__imagem--andreia {
     background-image: url('../../img/pessoas/andreia.jpg');
 }
+
+@media screen and (max-width: 768px) {
+    .pessoa__imagem { 
+        width: 100%;
+    }
+}
