--- a/assets/css/receita/receita.css
+++ b/assets/css/receita/receita.css
@@ -6,3 +6,10 @@
     margin-right: 5rem;
     width: 25%;
 }
+
+
+@media screen and (max-width: 768px) {
+    .receita {
+        width: 90%;
+    }
+}
