--- a/assets/css/banner/banner-titulo.css
+++ b/assets/css/banner/banner-titulo.css
@@ -10,3 +10,9 @@
     transform: translate(-50%, -50%);
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .banner__titulo {
+        font-size: 3rem;
+    }
+}
