--- a/assets/css/cabecalho.css
+++ b/assets/css/cabecalho.css
@@ -5,3 +5,14 @@
     justify-content: space-between;
     padding: 0 2rem;
 }
+
+@media screen and (max-width: 768px) {
+    .cabecalho {
+        justify-content: center;
+        padding: 0 1rem;
+    }
+
+    .logo {
+        display: none;
+    }
+}
