--- a/assets/css/pessoas.css
+++ b/assets/css/pessoas.css
@@ -3,3 +3,10 @@
     justify-content: space-around;
     padding-top: 3rem;
 }
+
+@media screen and (max-width: 768px) {
+    .pessoas {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
